--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-color: black;
+    background-color:gray;
 
 }
 
@@ -29,11 +29,17 @@ body {
     text-align: center;
 
 }
-img {
-    float: left;
-    padding-left: 20px;
-    padding-top: 20px;
+.imgItem {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 25px;
+    padding-bottom: 50px;
+    width: 400px;
+
   }
+
+
 
 
   .p2 {
@@ -43,10 +49,4 @@ img {
     text-align: left;
 
 }
-.resume {
-    float: left;
-    vertical-align: middle;
-  }
-
-
 
