--- a/styles.css
+++ b/styles.css
@@ -13,20 +13,27 @@ body {
 .header {
     padding-top: 40px;
     padding-bottom: 10px;
-    color: lightgrey;
+    color: white;
     flex: auto;
-    font-style: italic;
-    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     background-color:gray;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 60px;
 
 }
 
-.p {
-    color: lightgrey;
+.subheading {
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
     size: 50px;
     text-align: center;
+    font-style: italic;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: medium;
 
 }
 .imgItem {
@@ -34,9 +41,11 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding-top: 25px;
-    padding-bottom: 50px;
+    padding-bottom: 25px;
     width: 400px;
-
+    font-family: -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
 
