--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,11 @@ body {
     text-align: left;
 
 }
+
+.button {
+    width: 150px;
+    background-color: whitesmoke;
+    font-family: -apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
+}
