--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
     'Open Sans', 'Helvetica Neue', sans-serif;
+    object-fit: cover;
   }
 
 
@@ -65,4 +66,11 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
     'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+.centerImg{
+    width: 300px;
+    display:block;
+    text-align:center;
 }
