--- a/styles/experience.css
+++ b/styles/experience.css
@@ -8,8 +8,8 @@
 
 body {
     margin: 0;
-    background-color: var(--transparent-blue);
 }
+
 
 .header {
     background-color: var(--transparent-gray);
@@ -20,7 +20,6 @@ body {
     display: flex;
 
 }
-
 .title {
     font-size: 4em;
     padding-right: 30px;
@@ -35,56 +34,36 @@ body {
     color:white;
 }
 
+
 .page-content {
     margin-top:20px;
+    margin-left: 50px;
     padding: 30px;
     text-align: center;
 
 }
+
 .img-block {
-    display: inline-block;
-    width: 350px;
+    display: flex;
+    align-items: flex-start;
     height: 500px;
     overflow: hidden;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: left;
-    background-color: whitesmoke;
-    margin:10px;
+    margin:30px;
     padding-top: 20px;
     text-align: center;
+    
 }
 
 p {
     padding-left: 20px;
     padding-right: 20px;
+    text-align: left;
     color: black;
 }
 
 
 img {
-    width: 300px;
-    height:400px;
-
-   }
-
-
-#back-to-top-button {
     width: 200px;
-    background-color: whitesmoke;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-right: 500px;
-    margin-left: 500px;
-    margin-bottom: 100px;
-    font-size: 1.3em;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-    height:1.7em;
-}
-
-#back-to-top-button:hover {
-    background-color: white;
-}
-
-
-
+    height:auto;
+   }
