--- a/styles/about.css
+++ b/styles/about.css
@@ -8,12 +8,13 @@
 
 body {
     margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
 .header {
     background-color: var(--transparent-gray);
-    height:140px;
+    height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: white;
     padding-bottom: 10px;
@@ -30,7 +31,7 @@ body {
 #sub-header {
     font-size: 1.2em;
     margin-bottom: 10px;
-    padding-top: 70px;
+    padding-top: 100px;
     color:white;
 }
 
@@ -45,7 +46,7 @@ body {
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
     'Open Sans', 'Helvetica Neue', sans-serif;
     object-fit: cover;
-  }
+}
 
 .img-block {
     text-align: center;
@@ -56,7 +57,10 @@ body {
     width: 400px;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
+p {
+    text-align: left;
 }
 
 img {
