--- a/styles/contact.css
+++ b/styles/contact.css
@@ -10,7 +10,7 @@ body {
 }
 .header {
     background-color: var(--transparent-gray);
-    height:140px;
+    height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: white;
     padding-bottom: 10px;
