--- a/styles/graphicdesign.css
+++ b/styles/graphicdesign.css
@@ -2,6 +2,7 @@
     --transparent-gray: rgba(185, 184, 184, 0.644);
     --transparent-blue: rgba(202, 210, 212, 0.822);
     --hover-gray: rgba(168, 166, 166, 0.726);
+    --light-transparent-gray: rgba(226, 226, 226, 0.822);
 
 }
 
@@ -12,11 +13,11 @@ body {
 
 .header {
     background-color: var(--transparent-gray);
-    height:140px;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: white;
     padding-bottom: 10px;
     display: flex;
+    height: auto;
 
 }
 
@@ -33,6 +34,7 @@ body {
     padding-top: 70px;
     color:white;
 }
+
 .page-content {
     margin-top:20px;
     padding: 30px;
@@ -62,26 +64,6 @@ p {
 img {
     width: 300px;
     height:400px;
-
-   }
-
-
-#back-to-top-button {
-    width: 200px;
-    background-color: whitesmoke;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin-right: 500px;
-    margin-left: 500px;
-    margin-bottom: 100px;
-    font-size: 1.3em;
-    border: none;
-    outline: none;
-    border-radius: 4px;
-    height:1.7em;
-}
-
-#back-to-top-button:hover {
-    background-color: var(--hover-gray);
 }
 
 
