--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,35 +1,46 @@
+:root {
+    --transparent-gray: rgba(185, 184, 184, 0.644);
+    --transparent-blue: rgba(202, 210, 212, 0.822);
+    --hover-gray: rgba(168, 166, 166, 0.726);
+    --light-transparent-gray: rgba(226, 226, 226, 0.822);
+
+}
+
 body {
-    margin:0;
+    margin: 0;
 }
 
 .header {
-    background-color: rgba(202, 202, 202, 0.644);
-    display:flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    height:140px;
+    background-color: var(--transparent-gray);
+    height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    color:white;
+    color: white;
     padding-bottom: 10px;
+    display: flex;
 
 }
 
 .title {
     font-size: 4em;
+    padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 50px;
 }
 
 #sub-header {
     font-size: 1.2em;
     margin-bottom: 10px;
+    padding-top: 70px;
+    color:white;
 }
 
 .page-content {
-    display:flex;
-    flex:auto;
-    height:100%;
+    display: flex;
+    flex: auto;
+    height: 100%;
     align-items: flex-start;
-    position:absolute;
-    width:100%;
+    position: absolute;
+    width: 100%;
 }
 
 .side-bar {
@@ -37,13 +48,24 @@ body {
     width: 25%;
     border-right: 2px solid rgba(202, 202, 202, 0.644);
     height:inherit;
+    background-color: var(--transparent-blue);
+    font-size: 1.2em;
+    overflow: hidden;
+}
 
+li {
+    padding: 5px;
+}
+
+li:hover {
+    color: white;
+    cursor: pointer;
 }
 
 .main-content {
     display: inline-block;
     width: 75%;
     height: inherit;
-
-
+    margin: 25px;
+    margin-top: 0px;
 }
