--- a/styles/studioart.css
+++ b/styles/studioart.css
@@ -13,7 +13,7 @@ body {
 
 .header {
     background-color: var(--transparent-gray);
-    height:140px;
+    height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: white;
     padding-bottom: 10px;
