--- a/styles/index.css
+++ b/styles/index.css
@@ -1,77 +1,32 @@
 :root {
-    --main-orange: #ECB16B;
-    --main-green: #B0D07D;
-    --main-cream: #F5ECD6;
-    --main-teal: #F0FFEE
+    --transparent-gray: rgba(185, 184, 184, 0.644);
+    --transparent-blue: rgba(202, 210, 212, 0.822);
+    --hover-gray: rgba(168, 166, 166, 0.726);
+    --light-transparent-gray: rgba(226, 226, 226, 0.822);
+
 }
 
 body {
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
-
+    background-color: var(--transparent-blue);
 }
 
-.header {
-    padding-top: 40px;
-    padding-bottom: 10px;
-    color: white;
-    flex: auto;
-    text-align: center;
-    background-color:gray;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 60px;
-
+.page-content {
+    margin: 30px;
+    margin-top: 10px;
 }
 
-.subheading {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    size: 50px;
-    text-align: center;
-    font-style: italic;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: medium;
-
-}
-.imgItem {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width: 400px;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
-    object-fit: cover;
-  }
-
-
-
-
-  .p2 {
+.btn.btn-primary {
+    background-color: var(--transparent-gray);
+    border: none;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    size: 100px;
-    text-align: left;
-
 }
 
-.button {
-    width: 150px;
-    background-color: whitesmoke;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
+.btn.btn-primary:hover {
+    background-color: var(--light-transparent-gray);
 }
 
-
-.centerImg{
-    width: 300px;
-    display:block;
-    text-align:center;
+img {
+    margin-top: 15px;
 }
