--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,12 +1,13 @@
 :root {
     --transparent-gray: rgba(185, 184, 184, 0.644);
-    --transparent-blue: rgba(202, 210, 212, 0.822);
+    --transparent-blue: rgba(201, 209, 211, 0.822);
     --hover-gray: rgba(168, 166, 166, 0.726);
     --light-transparent-gray: rgba(226, 226, 226, 0.822);
-}
 
+}
 body {
     margin: 0;
+    background-color: var(--transparent-blue);
 }
 .header {
     background-color: var(--transparent-gray);
