--- a/styles/skills.css
+++ b/styles/skills.css
@@ -1,6 +1,6 @@
 :root {
     --transparent-gray: rgba(185, 184, 184, 0.644);
-    --transparent-blue: rgba(202, 210, 212, 0.822);
+    --transparent-blue: rgba(201, 209, 211, 0.822);
     --hover-gray: rgba(168, 166, 166, 0.726);
     --light-transparent-gray: rgba(226, 226, 226, 0.822);
 
@@ -8,16 +8,16 @@
 
 body {
     margin: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    height: 100%;
 }
 
 .header {
     background-color: var(--transparent-gray);
-    height: auto;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: white;
     padding-bottom: 10px;
     display: flex;
-
 }
 
 .title {
@@ -35,37 +35,58 @@ body {
 }
 
 .page-content {
-    display: flex;
-    flex: auto;
-    height: 100%;
-    align-items: flex-start;
-    position: absolute;
     width: 100%;
+    display: flex;
+    align-items: flex;
 }
 
 .side-bar {
-    display: inline-block;
-    width: 25%;
-    border-right: 2px solid rgba(202, 202, 202, 0.644);
-    height:inherit;
     background-color: var(--transparent-blue);
     font-size: 1.2em;
+    width: 25%;
+    display: inline-block;
     overflow: hidden;
 }
 
-li {
-    padding: 5px;
+.side-bar ul {
+    margin: 25px;
+    margin-left: 0px;
+    list-style: none;
+    border-radius: 4px;
+}
+
+.side-bar li {
+    padding: 10px;
+    border-bottom: 1px solid black;
 }
 
 li:hover {
-    color: white;
     cursor: pointer;
+    text-decoration: underline;
+    border-radius: 4px;
 }
 
 .main-content {
     display: inline-block;
-    width: 75%;
-    height: inherit;
     margin: 25px;
-    margin-top: 0px;
+    left: 25%;
+    height: 100%;
+    width: 100%
+
+}
+
+.main-content h6 {
+    padding-top: 10px;
+}
+
+.accordion {
+    width: 100%;
+    padding-bottom: 40px;
+}
+.accordion button {
+    color: black;
+}
+
+p {
+    font-size: 1.5em;
 }
