added js to skills

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -8,6 +8,7 @@
 body {
     margin: 0;
     background-color: var(--transparent-blue);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .header {
     background-color: var(--transparent-gray);
