--- a/styles/contact.css
+++ b/styles/contact.css
@@ -5,9 +5,6 @@
     --light-transparent-gray: rgba(226, 226, 226, 0.822);
 
 }
-body {
-    background-color: var(--transparent-blue);
-}
 
 .contact-form-div {
     float: left;
@@ -17,7 +14,6 @@ body {
     height: 500px;
     text-align: left;
     border-radius: 8px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     margin-bottom: 0;
 }
 
@@ -51,9 +47,10 @@ textarea {
     resize: none;
     border-radius: 8px;
     font: inherit;
-    width:100%;
+    width: 400px;
     font-size: 0.8em;
     margin-bottom: 10px;
+    overflow: auto;
 }
 
 #submit {
@@ -65,15 +62,15 @@ textarea {
     border-radius:7px;
     text-align: center;
     background-color: var(--light-transparent-gray);
+    margin-bottom: 100px;
 }
 
 .fyi {
-    float: left;
     background-color: lightyellow;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     border-radius: 8px;
-    margin: 40px;
+    margin-left: 40px;
     padding:20px;
-    padding-top: 0;
+    margin-top: 1em;
+    width: fit-content;
 
 }
