--- a/styles/experience.css
+++ b/styles/experience.css
@@ -20,13 +20,12 @@ body {
 .img-block {
     display: flex;
     align-items: flex-start;
-    height: 500px;
-    overflow: hidden;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     margin:30px;
     padding-top: 20px;
     text-align: center;
-    
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 p {
