--- a/styles/about.css
+++ b/styles/about.css
@@ -3,42 +3,49 @@
     --transparent-blue: rgba(201, 209, 211, 0.822);
     --hover-gray: rgba(168, 166, 166, 0.726);
     --light-transparent-gray: rgba(226, 226, 226, 0.822);
-
+    --header: #e9ecef;
+    --header-font: rgba(0, 0, 0, 0.795);
+    --bright-cyan: rgb(0, 194, 194);
 }
 
+.profile {
+    margin: 30px;
+    padding: 20px;
+    margin-top: 0;
+    border-radius: 10px;
+    color: var(--header-font);
+    transition: 0.3s;
+}
 
-
-.imgItem {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width: 400px;
-    font-family: -apple-system, BlinkMacSystemFont, 
-    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
-    'Open Sans', 'Helvetica Neue', sans-serif;
+.profile img {
+    display: inline-block;
+    height: 350px;
+    width: 300px;
     object-fit: cover;
+    border-radius: 8px;
 }
 
-.img-block {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    width: 400px;
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.profile p {
+    display: inline-block;
+    width: 500px;
+    vertical-align: top;
+    padding-left: 30px;
+    font-size: 1.3em;
 }
 
-p {
-    text-align: left;
+.profile:hover {
+    background-color: var(--header);
 }
 
-img {
-    object-fit: cover;
+.profile-header {
+    font-size: 1.5em;
+    padding: 20px;
+    margin-right: 30px;
+    padding-bottom: 0;
+    text-align: right;
 }
+
+
 
 footer {
     text-align: center;
@@ -47,10 +54,12 @@ footer {
 .github-link {
     font-size: 1.5em;
     margin-bottom: 1em;
+    transition: 0.3s;
 }
 
 #github-link:hover {
-    color: rgb(0, 194, 194);
+    color: var(--bright-cyan);
+    transition: 0.3s;
 }
 
 #surprise-button {
@@ -61,6 +70,7 @@ footer {
     outline: none;
     background-color: var(--transparent-gray);
     border-radius: 4px;
+    transition: 0.3s;
 }
 
 #surprise-button:hover {
