--- a/styles/index.css
+++ b/styles/index.css
@@ -24,3 +24,13 @@
 img {
     margin-top: 15px;
 }
+
+footer {
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 50px 50px 0;
+}
+
+footer a {
+    padding-left: 20px;
+}
